# infodir

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  api.py  pyproject.toml  requirements.txt
api/: app.py
schemas/: curated.avsc  features.avsc
scripts/: delta_setup.py  register_schema.py
terraform/: main.tf  variables.tf
tests/: conftest.py
vector_store/: __init__.py  base.py  milvus_store.py  pgvector_store.py  weaviate_store.py
